--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
           <div class="shape">
             <h6 class="option_title text-uppercase">Shape</h6>
             <div class="shape_options d-flex justify-content-between align-items-center">
-              <div class="shape_s_option" data-shape="round"><img src="/images/RoundShape.png" alt="round"></div>
-              <div class="shape_s_option" data-shape="princess"><img src="/images/princessShape.png" alt="princess"></div>
-              <div class="shape_s_option" data-shape="emerald"><img src="/images/emeraldShape.png" alt="emerald"></div>
-              <div class="shape_s_option" data-shape="oval"><img src="/images/ovalShape.png" alt="oval"></div>
-              <div class="shape_s_option" data-shape="marquise"><img src="/images/marquiseShape.png" alt="marquise"></div>
-              <div class="shape_s_option" data-shape="pear"><img src="/images/pearShape.png" alt="pear"></div>
-              <div class="shape_s_option" data-shape="cushion"><img src="/images/cushionShape.png" alt="cushion"></div>
-              <div class="shape_s_option" data-shape="radiant"><img src="/images/radiantShape.png" alt="radiant"></div>
-              <div class="shape_s_option" data-shape="asscher"><img src="/images/asscherShape.png" alt="asscher"></div>
-              <div class="shape_s_option" data-shape="herat"><img src="/images/heratShape.png" alt="herat"></div>
+              <div class="shape_s_option" data-shape="round"><img src="./images/RoundShape.png" alt="round"></div>
+              <div class="shape_s_option" data-shape="princess"><img src="./images/princessShape.png" alt="princess"></div>
+              <div class="shape_s_option" data-shape="emerald"><img src="./images/emeraldShape.png" alt="emerald"></div>
+              <div class="shape_s_option" data-shape="oval"><img src="./images/ovalShape.png" alt="oval"></div>
+              <div class="shape_s_option" data-shape="marquise"><img src="./images/marquiseShape.png" alt="marquise"></div>
+              <div class="shape_s_option" data-shape="pear"><img src="./images/pearShape.png" alt="pear"></div>
+              <div class="shape_s_option" data-shape="cushion"><img src="./images/cushionShape.png" alt="cushion"></div>
+              <div class="shape_s_option" data-shape="radiant"><img src="./images/radiantShape.png" alt="radiant"></div>
+              <div class="shape_s_option" data-shape="asscher"><img src="./images/asscherShape.png" alt="asscher"></div>
+              <div class="shape_s_option" data-shape="herat"><img src="./images/heratShape.png" alt="herat"></div>
             </div>
           </div>
           <div class="row mt-3">
