--- a/index.html
+++ b/index.html
@@ -162,21 +162,21 @@
               </div>
 
               <div class="clarity_option mt-md-3">
-                  <h6 class="option_title text-uppercase">CLARITY</h6>
-                  <div id="clarity_slider_range"></div>
-                  
-                  <ul class="d-flex justify-content-around align-items-center mt-3 list-unstyled">
-                    <li>IF</li>
-                    <li>VVS1</li>
-                    <li>VVS2</li>
-                    <li>VS1</li>
-                    <li>VS2</li>
-                    <li>SI1</li>
-                    <li>SI2</li>
-                    <li>SI3</li>
-                    <li>I1</li>
-                  </ul>
-                </div>
+                <h6 class="option_title text-uppercase">CLARITY</h6>
+                <div id="clarity_slider_range"></div>
+
+                <ul class="d-flex justify-content-around align-items-center mt-3 list-unstyled">
+                  <li>IF</li>
+                  <li>VVS1</li>
+                  <li>VVS2</li>
+                  <li>VS1</li>
+                  <li>VS2</li>
+                  <li>SI1</li>
+                  <li>SI2</li>
+                  <li>SI3</li>
+                  <li>I1</li>
+                </ul>
+              </div>
 
               <div class="polish_option mt-md-3">
                 <h6 class="option_title text-uppercase">polish</h6>
@@ -845,6 +845,37 @@
           </tr>
         </tbody>
       </table>
+
+      <div id="diamond_preview">
+        <span id="preview_close_btn"><i class="fas fa-times"></i></span>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="left_side pl-md-5 pl-3 pt-4">
+                <div class="diamond_width pb-3">WIDTH 2.61MM</div>
+
+                <div class="diamond_img">
+                  <img src="./images/princess@2x.png" alt="diamond">
+                </div>
+                <div class="diamond_length pt-3">LENGTH 3.31MM</div>
+              </div>
+            </div>
+            <div class="col-md-8">
+              <div class="right_side  pl-3 pt-5">
+                <h3 class="diamond_title diamond_carat text-uppercase">0.17-CARAT</h3>
+                <h3 class="diamond_title diamond_shape text-uppercase">Princess DIAMOND</h3>
+                <h4 class="diamond_subtitle diamond_lab">GRADED BY GIA</h4>
+                <h2 class="diamond_price">$150.00</h2>
+                <div class="diamond_preview_actions my-3">
+                  <a href="#">LEARN MORE</a>
+                </div>
+                <p class="diamond_about pb-3 mr-3">The 0.17 carat princess diamond has I color, VVS2 clarity and has a diamond
+                  grading report from GIA.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <div class="search_fotter d-flex justify-content-end align-items-center">
         <div class="pg_nav d-flex justify-content-start align-items-center">
