--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
               </form>
               <div class="follow_link mt-2 mt-lg-4">
                 <h3 class="title">Follow us on:</h3>
-                <a class="pr-3" href="#">Facebook</a>
+                <a class="pr-3 fb" href="#">Facebook</a>
                 <a class="pl-3" href="#">Instagram</a>
               </div>
             </div>
