--- a/index.html
+++ b/index.html
@@ -935,8 +935,8 @@
             <div class="content">
               <h3 class="title">Store Location</h3>
               <p>
-                20 West, 47th Street </br>
-                New York, N.Y 10036 </br>
+                20 West, 47th Street <br>
+                New York, N.Y 10036 <br>
                 Tel: 212-869-1818
               </p>
             </div>
