fixed search button

--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
 
     <nav>
       <ul class="list-unstyled d-flex flex-wrap justify-content-around mb-0">
-        <li>
+        <li class="mx-2">
           <a href="https://bellagiodiamondsnyc.com/product-category/engagement-rings/">Engagement Rings</a>
         </li>
-        <li>
+        <li class="mx-2">
           <a href="https://bellagiodiamondsnyc.com/product-category/wedding-bands/">Wedding Bands</a>
         </li>
-        <li>
+        <li class="mx-2">
           <a href="https://bellagiodiamondsnyc.com/product-category/diamonds/">Diamonds</a>
         </li>
-        <li>
+        <li class="mx-2">
           <a href="https://bellagiodiamondsnyc.com/product-category/earrings/">Earrings</a>
         </li>
-        <li>
+        <li class="mx-2">
           <a href="https://bellagiodiamondsnyc.com/product-category/pendants/">Pendants</a>
         </li>
-        <li>
+        <li class="mx-2">
           <a href="https://bellagiodiamondsnyc.com/product-category/bracelets/">Bracelets</a>
         </li>
       </ul>
@@ -78,8 +78,8 @@
     <div id="diamondsearch">
 
       <div class="search-title d-flex align-items-center">
-        <h1>SEARCH DIAMONDS : <span class="ng-binding">Showing&nbsp;33,915&nbsp;diamonds</span></h1>
-        <div id="filterSlideToggleBtn">SEARCH <i class="fas fa-caret-down"></i></div>
+        <h1>SEARCH DIAMONDS : <span>Showing&nbsp;33,915&nbsp;diamonds</span></h1>
+        <div id="filterSlideToggleBtn" class="d-flex justify-content-center align-items-center">SEARCH <i class="fas fa-caret-down d-none d-sm-block"></i></div>
       </div>
 
       <div id="ds_filter">
