done with slow api key

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       <div class="search-title d-flex align-items-center">
         <h1>SEARCH DIAMONDS : <span>Showing&nbsp;33,915&nbsp;diamonds</span></h1>
-        <div id="filterSlideToggleBtn" class="d-flex justify-content-center align-items-center">SEARCH <i class="fas fa-caret-down d-none d-sm-block"></i></div>
+        <div id="filterSlideToggleBtn" class="d-flex justify-content-center align-items-center">SEARCH <i class="fas fa-caret-down d-none d-sm-block"> </i><i class="fas fa-times d-none"></i></div>
       </div>
 
       <div id="ds_filter">
@@ -607,10 +607,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
   <!-- Jquery Ui Js -->
   <script src="./js/lib/jquery-ui.min.js"></script>
-  <!-- app js for api -->
-  <script src="./js/app.js"></script>
   <!-- main js -->
-  <script src="./js/main.js"></script>
+  <script src="./js/app.min.js"></script>
 </body>
 
 </html>
