--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         </thead>
         <tbody class="list">
           <tr>
-            <td class="shape">Round</td>
+            <td class="shape">ROUND</td>
             <td class="carat">0.9</td>
             <td class="color">N</td>
             <td class="clarity">VVS2</td>
@@ -336,7 +336,7 @@
             <td class="price">$1170</td>
           </tr>
           <tr>
-            <td class="shape">Round</td>
+            <td class="shape">ROUND</td>
             <td class="carat">0.43</td>
             <td class="color">J</td>
             <td class="clarity">VVS2</td>
@@ -347,7 +347,7 @@
             <td class="price">$1300</td>
           </tr>
           <tr>
-            <td class="shape">Round</td>
+            <td class="shape">ROUND</td>
             <td class="carat">0.9</td>
             <td class="color">J</td>
             <td class="clarity">VVS2</td>
@@ -458,7 +458,7 @@
             <td class="price">$720</td>
           </tr>
           <tr>
-            <td class="shape">Round</td>
+            <td class="shape">ROUND</td>
             <td class="carat">0.9</td>
             <td class="color">I</td>
             <td class="clarity">VVS2</td>
