--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       <div class="search-title d-flex align-items-center">
         <h1>SEARCH DIAMONDS : <span>Showing&nbsp;33,915&nbsp;diamonds</span></h1>
-        <div id="filterSlideToggleBtn" class="d-flex justify-content-center align-items-center">SEARCH <i class="fas fa-caret-down d-none d-sm-block"> </i><i class="fas fa-times d-none"></i></div>
+        <div id="filterSlideToggleBtn" class="d-flex justify-content-center align-items-center">SEARCH <i class="fas fa-caret-down"> </i><i class="fas fa-times d-none"></i></div>
       </div>
 
       <div id="ds_filter">
@@ -216,14 +216,14 @@
               </div>
             </th>
             <th>
-              <div class="sort " data-sort="color">
+              <div class="sort" data-sort="color">
                 <span>COLOR<i class="ml-2 fas fa-angle-up"></i></span>
                 <div class="attributes">D - M</div>
               </div>
             </th>
 
             <th>
-              <div class="sort" data-sort="clarity">
+              <div class="sort color_sort" data-sort="clarity">
                 <span>CLARITY<i class="ml-2 fas fa-angle-up"></i></span>
                 <div class="attributes">IF - I1</div>
               </div>
@@ -236,7 +236,7 @@
               </div>
             </th>
 
-            <th class="d-none d-sm-table-cell">
+            <th class="d-none d-md-table-cell">
               <div class="sort" data-sort="polish">
                 <span>POLISH</span>
                 <div class="attributes">EX - FAIR</div>
@@ -475,7 +475,7 @@
         <span id="preview_close_btn"><i class="fas fa-times"></i></span>
         <div class="container">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 d-flex justify-content-center justify-content-md-start">
               <div class="left_side pl-md-5 pl-3 pt-4">
                 <div class="diamond_width pb-3">WIDTH 2.61MM</div>
 
@@ -486,15 +486,15 @@
               </div>
             </div>
             <div class="col-md-8">
-              <div class="right_side  pl-3 pt-5">
+              <div class="right_side text-center text-md-left pl-3 pt-5">
                 <h3 class="diamond_title diamond_carat text-uppercase">0.17-CARAT</h3>
                 <h3 class="diamond_title diamond_shape text-uppercase">Princess DIAMOND</h3>
                 <h4 class="diamond_subtitle diamond_lab">GRADED BY GIA</h4>
                 <h2 class="diamond_price">$150.00</h2>
-                <div class="diamond_preview_actions my-3">
+                <div class="diamond_preview_actions my-3 m-auto m-md-0">
                   <a href="#">LEARN MORE</a>
                 </div>
-                <p class="diamond_about pb-3 mr-3">The 0.17 carat princess diamond has I color, VVS2 clarity and has a
+                <p class="diamond_about pb-3 mr-3 mt-2">The 0.17 carat princess diamond has I color, VVS2 clarity and has a
                   diamond
                   grading report from GIA.</p>
               </div>
